# sharing

./: .gitignore  Cargo.toml  Dockerfile  build.rs
.github/workflows/: branch-policy.yml  ci-sandbox.yml  pre-release-main.yml  release-main.yml
migrations/: 20260422000001_create_sharing.sql  20260616000001_add_leg_weight.sql  20260616000002_settlement_payments.sql  20260620000001_sharing_participants.sql  20260622000001_settlement_confirmations.sql  20260622000002_comments_and_activity.sql  20260623000001_widen_paid_by.sql  20260624000001_sharing_expense_items.sql  20260713000001_join_link_org_id.sql
src/: lib.rs  main.rs
src/converters/: mod.rs
src/handler/: mod.rs
src/manager/: mod.rs
src/manager/biz/: mod.rs  settlement.rs  split_math.rs
src/manager/client/: mod.rs
src/manager/repository/: mod.rs
src/manager/validate/: mod.rs
tests/: e2e.sh
