[package]
name = "sharing"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
proptest = "1"

[dependencies]
axum = "0.8.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
tracing = "0.1"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio", "macros", "chrono", "uuid", "migrate"] }
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio-stream = "0.1"
philand_logging    = { package = "logging",     path = "../libs/logging" }
philand_configs    = { package = "configs",     path = "../libs/configs" }
philand_application = { package = "application", path = "../libs/application" }
philand_time       = { package = "time",        path = "../libs/time" }
philand_random     = { package = "random",      path = "../libs/random" }
philand_error      = { package = "error",       path = "../libs/error" }
philand_crypto     = { package = "crypto",      path = "../libs/crypto" }
